--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.85.5",
+    "framer-motion": "^12.23.12",
     "next": "15.5.0",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zustand": "^5.0.8"
